--- a/LinearAlgebra/1_linear_equations/1.1_system_of_linear_equation.ipynb
+++ b/LinearAlgebra/1_linear_equations/1.1_system_of_linear_equation.ipynb
@@ -4,9 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Linear Equations in Linear Algebra\n",
-    "\n",
-    "## Systems of Linear Equations\n",
+    "# Systems of Linear Equations\n",
     "\n",
     "A linear equation in variables $x_{1} ,..., x_{n}$ is an equation that can be written in,\n",
     "            \n",
@@ -24,24 +22,24 @@
     "\\end{align*}\n",
     "$$\n",
     "\n",
-    "### Solution of a linear equation\n",
+    "## Solution of a linear equation\n",
     "\n",
     "A solution of a system is a list $ (s_{1},s_{2}, \\dots, s_{1} ) $ of numbers that make each equation a true statement.\n",
     "The set of all possible solutions is called a solution set of linear equation. Two linear system are called equivalent\n",
     "if they have same solution set.\n",
     "\n",
     "A system of linear equation has:\n",
-    "a) No solution, or (Inconsistent)\n",
-    "b) Exactly 1 solution, or (Unique and Consistent)\n",
-    "c) Infinitely many solution (Consistent)\n",
+    "-  No solution, or (Inconsistent)\n",
+    "- Exactly 1 solution, or (Unique and Consistent)\n",
+    "- Infinitely many solution (Consistent)\n",
     "\n",
-    "### Elementary row operations\n",
+    "## Elementary row operations\n",
     "\n",
-    "a) Replace one row by the sum of itself and multiple of another row.\n",
-    "b) Interchange rows.\n",
-    "c) Multiply all entries in a row by a non-zero constant\n",
+    "- Replace one row by the sum of itself and multiple of another row.\n",
+    "- Interchange rows.\n",
+    "- Multiply all entries in a row by a non-zero constant\n",
     "\n",
-    "### Insight\n",
+    "## Insight\n",
     "\n",
     "Main algorithm is reducing the augmented matrix to upper triangular matrix.\n",
     "\n",
@@ -94,7 +92,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.10.6"
   }
  },
