existence and uniqueness theorem

--- a/LinearAlgebra/1_linear_equations/1.2_echelon_forms.ipynb
+++ b/LinearAlgebra/1_linear_equations/1.2_echelon_forms.ipynb
@@ -56,7 +56,16 @@
     "\n",
     "## Solutions of Linear systems\n",
     "\n",
-    "In reduced echelon form pivot positions are basic variables, while other variables are called free variable."
+    "In reduced echelon form pivot positions are basic variables, while other variables are called free variable.\n",
+    "\n",
+    "## Existence and Uniqueness Theorem\n",
+    "\n",
+    "A linear system is consistent iff the righmost column of the echelon form is not a pivot column\n",
+    "\n",
+    "If a linear system is consistent:\n",
+    "\n",
+    "1. Unique solution : When there are no free variables\n",
+    "2. Infinitely many solution : When there is at least 1 free variable"
    ]
   }
  ],
