complete linear algebra

--- a/LinearAlgebra/1_linear_equations/1.2_echelon_forms.ipynb
+++ b/LinearAlgebra/1_linear_equations/1.2_echelon_forms.ipynb
@@ -51,7 +51,7 @@
     "\n",
     "## Pivot Positions\n",
     "\n",
-    "A pivot position in a matrix A is a locaion in A that corresponds to a leading 1 in the reduced echelon form of A. A \n",
+    "A pivot position in a matrix A is a location in A that corresponds to a leading 1 in the reduced echelon form of A. A \n",
     "pivot column is a column of A that contains a pivot position.\n",
     "\n",
     "## Solutions of Linear systems\n",
@@ -62,10 +62,28 @@
     "\n",
     "A linear system is consistent iff the righmost column of the echelon form is not a pivot column\n",
     "\n",
+    "- Basic variables: Correspond to pivot columns.\n",
+    "- Free variables:  Correspond to non-pivot columns and can take any value.\n",
+    "\n",
     "If a linear system is consistent:\n",
     "\n",
     "1. Unique solution : When there are no free variables\n",
-    "2. Infinitely many solution : When there is at least 1 free variable"
+    "2. Infinitely many solution : When there is at least 1 free variable\n",
+    "\n",
+    "## Summary\n",
+    "\n",
+    "All the echelon and reduced echelon form are an attempt to get closer to the ideal form:\n",
+    "\n",
+    "$\n",
+    "\\begin{bmatrix}\n",
+    "1 & 0 & 0 & a \\\\\n",
+    "0 & 1 & 0 & b \\\\\n",
+    "0 & 0 & 1 & c\n",
+    "\\end{bmatrix}\n",
+    "$\n",
+    "\n",
+    "Here, no calculation is needed, the matrix is itself in solution form,\n",
+    "x=a, y=b, z=c"
    ]
   }
  ],
