--- a/DiscreteMaths/notes/logic_of_compound_statements/2_valid_invalid_arguments.ipynb
+++ b/DiscreteMaths/notes/logic_of_compound_statements/2_valid_invalid_arguments.ipynb
@@ -24,77 +24,6 @@
     "\n",
     "![Rules of Inference](rules_of_inference.png \"Rules of Inference\")\n",
     "\n",
-    "### Modus Ponens\n",
-    "\n",
-    "In Latin, it means method of affirmation.\n",
-    "\n",
-    "If p then q.\n",
-    "p\n",
-    "Therefore, q\n",
-    "\n",
-    "### Modus Tollens\n",
-    "\n",
-    "In Latin, it means method of denying.\n",
-    "\n",
-    "If p then q.\n",
-    "~q\n",
-    "Therefore, ~p\n",
-    "\n",
-    "If Zeus is human, then Zeus is mortal.\n",
-    "Zeus is not mortal.\n",
-    "Therefore, Zeus is not human.\n",
-    "\n",
-    "###  Generalization\n",
-    "\n",
-    "p\n",
-    "Therefore, p v q\n",
-    "\n",
-    "q\n",
-    "Therefore, p v q\n",
-    "\n",
-    "Anton is a junior.\n",
-    "Therefore, (more generally) Anton is a junior or Anton is a senior.\n",
-    "\n",
-    "### Specialization\n",
-    "\n",
-    "Here, we discard extraneous information as you concentrate on the particular property of interest.\n",
-    "\n",
-    "p and q\n",
-    "Therefore, p\n",
-    "\n",
-    "p and q\n",
-    "Therefore, q\n",
-    "\n",
-    "### Elimination\n",
-    "\n",
-    "p or q\n",
-    "~q\n",
-    "Therefore, p\n",
-    "\n",
-    "p or q\n",
-    "~p\n",
-    "Therefore, q\n",
-    "\n",
-    "### Transitivity\n",
-    "\n",
-    "p -> q\n",
-    "q -> r\n",
-    "Therefore, p -> r\n",
-    "\n",
-    "### Proof by division into cases\n",
-    "\n",
-    "p or q\n",
-    "p -> r\n",
-    "q -> r\n",
-    "Therefore, r\n",
-    "\n",
-    "### Proof by contradiction\n",
-    "\n",
-    "~p -> c , where c is a contradiction\n",
-    "Therefore, p\n",
-    "\n",
-    "If an assumption leads to contradiction, then that assumption must be false.\n",
-    "\n",
     "## Fallacies\n",
     "\n",
     "A fallacy is an error in reasoning that results in an invalid argument. Some common fallacies are:\n",
@@ -102,15 +31,15 @@
     "- Ambiguous premises : Using ambiguous premises\n",
     "- Circular reasoning : Assuming what is to be proved without having derieved it from premises\n",
     "- Jumping to a conclusion : Jumping to a conclusion without adequate grounds.\n",
-    "- Converse error : This fallacy is also known as affirming the consequent.\n",
-    "    p->q\n",
-    "    q\n",
-    "    Therefore, p\n",
+    "- Converse error : This fallacy is also known as affirming the consequent.<br/>\n",
+    "    P → Q <br/>\n",
+    "    Q <br/>\n",
+    "    ∴ P  (Incorrect inference)\n",
     "\n",
-    "- Inverse error : This fallacy is also known as denying the antecedent.\n",
-    "    p->q\n",
-    "    ~p\n",
-    "    Therefore, ~q\n"
+    "- Inverse error : This fallacy is also known as denying the antecedent.<br/>\n",
+    "    P → Q<br/>\n",
+    "    ¬P<br/>\n",
+    "    ∴ ¬Q  (Incorrect inference)\n"
    ]
   }
  ],
