--- a/DiscreteMaths/notes/logic_of_compound_statements/1_conditional_statements.ipynb
+++ b/DiscreteMaths/notes/logic_of_compound_statements/1_conditional_statements.ipynb
@@ -19,9 +19,11 @@
     "\n",
     "p -> q = ~p v q\n",
     "\n",
-    "Contrapositive of p -> q = ~q -> ~p, which is equivalent\n",
-    "Converse of p -> q = q->p\n",
-    "Inverse of p -> q = ~p -> ~q\n",
+    "## Converse, Inverse, Contrapositive\n",
+    "\n",
+    "- Contrapositive of p -> q = ~q -> ~p, which is equivalent\n",
+    "- Converse of p -> q = q->p\n",
+    "- Inverse of p -> q = ~p -> ~q\n",
     "\n",
     "The converse and inverse of a conditional statement are logically equivalent to each other."
    ]
