--- a/DiscreteMaths/notes/logic_of_compound_statements/2_valid_invalid_arguments.ipynb
+++ b/DiscreteMaths/notes/logic_of_compound_statements/2_valid_invalid_arguments.ipynb
@@ -15,7 +15,7 @@
     " - Identify the premises and conclusion of the argument form\n",
     " - Contruct a truth table showing truth values of all premises and the conclusion\n",
     " - A row of the truth table in which all the premises are true is called a critical row.\n",
-    "    ** If the conclusion in every critical row is true, then the argument is valid else invalid **\n",
+    "    If the conclusion in every critical row is true, then the argument is valid else invalid\n",
     "\n",
     "## Syllogism\n",
     "\n",
